[package]
name = "piston"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
bit-vec = "0.6.3"
dotenv = "0.15.0"
prost = "0.12.3"
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
tonic-reflection = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"

[[bin]]
name = "server"
path = "src/main.rs"
